--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: equistene # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
@@ -11,6 +11,10 @@ sites:
     url: https://news.ycombinator.com
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
+  - name: Grupo Sura
+    url: https://www.gruposura.com/
+  - name: Que Carne
+    url: https://quecarne.cl/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
