--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,12 @@ owner: equistene # Your GitHub organization or username, where this repository l
 repo: uptime-sites # The name of this repository
 
 sites:  
-  - name: Grupo Sura
-    url: https://www.gruposura.com/
+  - name: Portafolio
+    url: https://portafolio.xtn.cl/
   - name: Que Carne
     url: https://quecarne.cl/
+  - name: Unonuevedos
+    url: https://192.cl/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
