--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,9 +2,11 @@
 owner: equistene # Your GitHub organization or username, where this repository lives
 repo: uptime-sites # The name of this repository
 
-sites:  
+sites:   
   - name: Portafolio
     url: https://portafolio.xtn.cl/
+  - name: Polinomio
+    url: https://polinomio.cl/
   - name: Que Carne
     url: https://quecarne.cl/
   - name: Unonuevedos
